[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/StaticAssets/Fonts/GUI_Font.res" type="DynamicFont" id=1]
[ext_resource path="res://Assets/StaticAssets/Fonts/m5x7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/StaticAssets/Sprites/Stars.png" type="Texture" id=4]
[ext_resource path="res://Assets/StaticAssets/Animations/MainMenu.anim" type="Animation" id=5]
[ext_resource path="res://Assets/StaticAssets/Sounds/shoot.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.374603
margin_right = 0.374603
color = Color( 0.105882, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stars" type="Sprite" parent="."]
position = Vector2( 128.139, 111.992 )
texture = ExtResource( 4 )

[node name="Stars2" type="Sprite" parent="."]
position = Vector2( -127.648, 112.491 )
texture = ExtResource( 4 )

[node name="TitleLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 46.0209
margin_top = 25.2554
margin_right = -65.9791
margin_bottom = -119.745
custom_fonts/font = SubResource( 1 )
text = "SPACE
INVADERS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 96.25
margin_top = 120.5
margin_right = -108.75
margin_bottom = -89.5
custom_fonts/font = ExtResource( 1 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsLabel" type="Label" parent="."]
margin_left = 100.095
margin_top = 138.787
margin_right = 138.095
margin_bottom = 151.787
custom_fonts/font = ExtResource( 1 )
text = "Options"

[node name="QuitGameLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 95.75
margin_top = 155.25
margin_right = -109.25
margin_bottom = -54.75
custom_fonts/font = ExtResource( 1 )
text = "Quit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="."]
margin_left = 94.0
margin_top = 123.0
margin_right = 148.0
margin_bottom = 135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="TextureButton" parent="."]
margin_left = 99.0
margin_top = 142.0
margin_right = 139.0
margin_bottom = 152.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="."]
margin_left = 95.0
margin_top = 157.0
margin_right = 146.0
margin_bottom = 169.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Menu = ExtResource( 5 )

[node name="OptionsPanel" type="TabContainer" parent="."]
visible = false
margin_left = 46.5
margin_top = 62.5
margin_right = 209.5
margin_bottom = 175.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Tabs" parent="OptionsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VolumeSlider" type="HSlider" parent="OptionsPanel/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_right = -1.0
margin_bottom = -30.0
min_value = -86.0
max_value = 14.0
value = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterLabel" type="Label" parent="OptionsPanel/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
margin_bottom = -11.0
custom_fonts/font = ExtResource( 1 )
text = "Master Audio"
align = 1

[node name="OKButton" type="Button" parent="OptionsPanel/Audio"]
margin_left = 134.385
margin_top = 61.2628
margin_right = 158.385
margin_bottom = 80.2628
custom_fonts/font = ExtResource( 1 )
text = "OK"

[node name="SoundTest" type="AudioStreamPlayer" parent="OptionsPanel/Audio"]
stream = ExtResource( 6 )

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="value_changed" from="OptionsPanel/Audio/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="OptionsPanel/Audio/OKButton" to="." method="_on_OKButton_pressed"]
